calendar: fixes sidebar nav tabs alignment, correctly displays full-day events from Google

--- a/public/stylesheets/cal.css
+++ b/public/stylesheets/cal.css
@@ -1,3 +1,8 @@
+ul.nav-tabs a {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
 .cal-view{
   display:none;
 }
@@ -14,7 +19,7 @@
   display:none;
 }
 
-.error-box{
+#error-box{
   display: none;
   margin-bottom: 0;
 }
